# micrograd

./: .gitignore  LICENSE  README.md  SECURITY.md  micrograd_lecture_first_half_roughly.ipynb  pyproject.toml
micrograd/: __init__.py  engine.py  graph.py  nn.py
test/: test_graph.py  test_inheritance.py
