[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micrograd"
version = "0.1.0"
authors = [
    { name = "Andrej Karpathy", email = "andrej.karpathy@gmail.com" }
]
description = "A tiny scalar-valued autograd engine with a small PyTorch-like neural network library on top."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.4",
    "torch>=2.5.1",
]

[project.urls]
Repository = "https://github.com/karpathy/micrograd"
